Thêm các phương thức vào DAOVehicle để truy xuất VIN theo màu xe và đánh dấu xe đã bán. Cập nhật EVMOrderController để xử lý phân bổ tồn kho và cập nhật trạng thái đơn hàng